[package]
name = "wolfusb"
version = "0.4.2"
edition = "2024"
description = "Share USB devices over IP"
license = "MIT"

[dependencies]
# USB access — vendored to statically link libusb (works on any Linux distro)
rusb = { version = "0.9", features = ["vendored"] }

# Full USB/IP server implementation (async URBs, isoc, proper cancellation)
# Used in bridge mode to drive real webcams etc. over the wolfusb-authenticated socket
usbip = "0.8"
nusb = "0.2"

# Async runtime and networking
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

# Serialization
bincode = { version = "2", features = ["derive"] }

# Serialization (JSON output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Authentication
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "1"
rustls-pki-types = "1"
