[package]
name = "wolfusb"
version = "0.4.3"
edition = "2024"
description = "Share USB devices over IP"
license = "MIT"

[dependencies]
# USB access — vendored to statically link libusb (works on any Linux distro)
rusb = { version = "0.9", features = ["vendored"] }

# Full USB/IP server implementation (async URBs, isoc, proper cancellation)
# Used in bridge mode to drive real webcams etc. over the wolfusb-authenticated socket.
# Vendored + patched locally — upstream 0.8 has two bugs that break UVC streaming:
#   1. Rusb control-OUT handler discards bytes_written, returns empty Vec, so
#      RET_SUBMIT reports actual_length=0 — UVC SET_CUR probe fails with
#      "Failed to set UVC probe control : 0 (exp. 26)".
#   2. RET_SUBMIT serializer writes transfer_buffer on the wire unconditionally,
#      but the kernel only reads it for IN direction.
usbip = { path = "vendor/usbip" }
nusb = "0.2"

# Async runtime and networking
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

# Serialization
bincode = { version = "2", features = ["derive"] }

# Serialization (JSON output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Authentication
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "1"
rustls-pki-types = "1"
