[package]
name = "wolfusb"
version = "0.5.0"
edition = "2024"
description = "Share USB devices over IP"
license = "MIT"

[dependencies]
# USB access — vendored to statically link libusb (works on any Linux distro)
rusb = { version = "0.9", features = ["vendored"] }

# Note: we intentionally do NOT depend on the `usbip` Rust crate. Earlier
# versions of wolfusb tried that path but the crate's userspace URB handlers
# don't cover isochronous transfers (webcams, audio) or concurrent URBs.
# Instead the server does the auth + OP_REQ_IMPORT/OP_REP_IMPORT handshake
# itself and hands the raw socket fd to the kernel's `usbip_host` driver via
# sysfs, which implements the full USB/IP protocol in-kernel.

# Async runtime and networking
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

# Serialization
bincode = { version = "2", features = ["derive"] }

# Serialization (JSON output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Authentication
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "1"
rustls-pki-types = "1"
